# cpp-basic

./: .gitignore  README.md
02_build_hello/: CMakeLists.txt
02_build_hello/hello/: hello.cpp
02_build_hello/homework/: CMakeLists.txt  example.cpp  hello_world.cpp
calc/include/: number.hpp  operators.hpp  var.hpp
calc/src/: parser.cpp
container/: CMakeLists.txt  ListContainer.hpp  SerialContainer.hpp  main.cpp
game/: .gitignore  CMakeLists.txt  game.cpp  game.h  high_score.h  high_score.txt  main.cpp  score.cpp
project/: CMakeLists.txt  README.md  README.txt
project/code/: CMakeLists.txt  code.cpp
project/lib/: lexa.txt  login.txt
project/lib/test/: code.txt  test.txt
project/lib/test1/: code.txt
project/src/: code.hpp  main.cpp  pass.hpp  test.cpp
stat/: statistics.cpp
unit_testing/: CMakeLists.txt
unit_testing/src/: ListContainer.hpp  SerialCont.hpp  main.cpp
unit_testing/test/: test_list.cpp  test_list.hpp  test_main.cpp  test_serial.hpp
xo/: main.cpp  menu.hpp
